--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
                 <div id="cosmic-mode-status" class="status-effect-item"></div>
                 <div id="quantum-mode-status" class="status-effect-item"></div>
                 <div id="permanent-buff-status" class="status-effect-item"></div>
+                <div id="nest-status" class="status-effect-item"></div>
+                <div id="feather-status" class="status-effect-item"></div>
+                <div id="beetle-status" class="status-effect-item"></div>
+                <div id="branch-status" class="status-effect-item"></div>
             </div>
             <div class="bottom-controls-bar">
                 <div id="window-trigger-container" class="utility-trigger">
@@ -117,17 +121,6 @@
         <h3 class="modal-title">❔ Guide Topics</h3>
         <div id="guide-selection-modal-content" class="modal-content">
              </div>
-    </div>
-</div>
-
-<div id="window-modal-overlay" class="modal-overlay hidden">
-    <div class="modal-window">
-        <button id="window-modal-close-btn" class="modal-close-btn">&times;</button>
-        <h3 class="modal-title">🪟 Window</h3>
-        <div id="window-modal-content" class="modal-content">
-            <button id="window-toggle-btn" class="btn">Toggle Window</button>
-            <div id="window-items-container"></div>
-        </div>
     </div>
 </div>
 
