--- a/index.html
+++ b/index.html
@@ -49,42 +49,44 @@
         <div class="inventory-window">
             <div id="player-inventory-content" class="inventory-content"></div>
         </div>
-
-        <div class="bottom-utility-section">
-            <div class="status-effects-window">
-                <div id="donut-buff-status" class="status-effect-item"></div>
-                <div id="sushi-buff-status" class="status-effect-item"></div>
-                <div id="cat-buff-status" class="status-effect-item"></div>
-                <div id="phone-buff-status" class="status-effect-item"></div>
-                <div id="cosmic-mode-status" class="status-effect-item"></div>
-                <div id="quantum-mode-status" class="status-effect-item"></div>
-                <div id="permanent-buff-status" class="status-effect-item"></div>
-                <div id="nest-status" class="status-effect-item"></div>
-                <div id="feather-status" class="status-effect-item"></div>
-                <div id="beetle-status" class="status-effect-item"></div>
-                <div id="branch-status" class="status-effect-item"></div>
-            </div>
-            <div class="bottom-controls-bar">
-                <div id="window-trigger-container" class="utility-trigger">
-                    <div id="window-trigger-btn" class="utility-btn">🪟</div>
-                </div>
-                <div id="pet-trigger-container" class="utility-trigger">
-                    <div id="pet-trigger-btn" class="utility-btn">💙</div>
-                </div>
-                <div id="phone-trigger-container" class="utility-trigger">
-                    <div id="phone-trigger-btn" class="utility-btn">📱</div>
-                </div>
-                <div id="shop-trigger-container" class="utility-trigger">
-                    <div id="shop-trigger-btn" class="utility-btn">🏪</div>
-                </div>
-                <div id="guide-trigger-container" class="utility-trigger">
-                    <div id="guide-trigger-btn" class="utility-btn">❔</div>
-                </div>
-            </div>
-        </div>
     </div>
 
 </div>
+
+<nav class="bottom-nav-bar">
+    <div class="bottom-utility-section">
+        <div class="status-effects-window">
+            <div id="donut-buff-status" class="status-effect-item"></div>
+            <div id="sushi-buff-status" class="status-effect-item"></div>
+            <div id="cat-buff-status" class="status-effect-item"></div>
+            <div id="phone-buff-status" class="status-effect-item"></div>
+            <div id="cosmic-mode-status" class="status-effect-item"></div>
+            <div id="quantum-mode-status" class="status-effect-item"></div>
+            <div id="permanent-buff-status" class="status-effect-item"></div>
+            <div id="nest-status" class="status-effect-item"></div>
+            <div id="feather-status" class="status-effect-item"></div>
+            <div id="beetle-status" class="status-effect-item"></div>
+            <div id="branch-status" class="status-effect-item"></div>
+        </div>
+        <div class="bottom-controls-bar">
+            <div id="window-trigger-container" class="utility-trigger">
+                <div id="window-trigger-btn" class="utility-btn">🪟</div>
+            </div>
+            <div id="pet-trigger-container" class="utility-trigger">
+                <div id="pet-trigger-btn" class="utility-btn">💙</div>
+            </div>
+            <div id="phone-trigger-container" class="utility-trigger">
+                <div id="phone-trigger-btn" class="utility-btn">📱</div>
+            </div>
+            <div id="shop-trigger-container" class="utility-trigger">
+                <div id="shop-trigger-btn" class="utility-btn">🏪</div>
+            </div>
+            <div id="guide-trigger-container" class="utility-trigger">
+                <div id="guide-trigger-btn" class="utility-btn">❔</div>
+            </div>
+        </div>
+    </div>
+</nav>
 
 <div id="alien-media-payout-modal" class="modal-overlay hidden">
     <div class="modal-window">
