--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <div class="game">
         <h1 id="game-main-title">Keep Spinning</h1>
 
-        <div class="top-stats-bar">
-            <div class="coin-display" id="coins-display"></div>
+        <div class="meters-wrapper">
             <div class="power-meter-container">
                 <div class="power-meter-icon" id="power-meter-indicator-icon">🔌</div>
                 <div class="power-meter-bar">
@@ -23,6 +22,7 @@
                 </div>
                 <div class="next-power-bill-display" id="next-power-bill-cost-display"></div>
             </div>
+            
             <div class="food-meter-container">
                 <div class="food-icon-area">
                    <span class="food-meter-icon">🍽️</span>
@@ -34,6 +34,8 @@
             </div>
         </div>
 
+        <div class="symbol-inventory" id="symbol-inventory-display"></div>
+
         <div class="slot-grid" id="slot-grid"></div>
 
         <div class="win-display" id="total-win-display"></div>
@@ -44,13 +46,29 @@
             <button id="spin-btn" class="btn btn-spin">Spin - 20 🪙</button>
         </div>
 
+        <div class="coin-display" id="coins-display"></div>
+
+        <div class="inventory-window">
+            <div id="player-inventory-content" class="inventory-content"></div>
         </div>
+    </div>
 
 </div>
 
 <nav class="bottom-nav-bar">
     <div class="bottom-utility-section">
-        <div id="player-item-bar" class="player-item-bar"></div>
+        <div class="status-effects-window">
+            <div id="donut-buff-status" class="status-effect-item"></div>
+            <div id="cat-buff-status" class="status-effect-item"></div>
+            <div id="phone-buff-status" class="status-effect-item"></div>
+            <div id="cosmic-mode-status" class="status-effect-item"></div>
+            <div id="quantum-mode-status" class="status-effect-item"></div>
+            <div id="permanent-buff-status" class="status-effect-item"></div>
+            <div id="nest-status" class="status-effect-item"></div>
+            <div id="feather-status" class="status-effect-item"></div>
+            <div id="beetle-status" class="status-effect-item"></div>
+            <div id="branch-status" class="status-effect-item"></div>
+        </div>
         <div class="bottom-controls-bar">
             <div id="window-trigger-container" class="utility-trigger">
                 <div id="window-trigger-btn" class="utility-btn">🪟</div>
@@ -70,14 +88,6 @@
         </div>
     </div>
 </nav>
-
-<div id="window-modal-overlay" class="modal-overlay hidden">
-    <div class="modal-window">
-        <button id="window-modal-close-btn" class="modal-close-btn">&times;</button>
-        <h3 class="modal-title">🪟 Window</h3>
-        <div id="window-modal-content" class="modal-content"></div>
-    </div>
-</div>
 
 <div id="alien-media-payout-modal" class="modal-overlay hidden">
     <div class="modal-window">
