--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <div class="status-effects-window">
             <div id="donut-buff-status" class="status-effect-item"></div>
             <div id="cat-buff-status" class="status-effect-item"></div>
+            <div id="alien-buff-status" class="status-effect-item"></div>
             <div id="phone-buff-status" class="status-effect-item"></div>
             <div id="cosmic-mode-status" class="status-effect-item"></div>
             <div id="quantum-mode-status" class="status-effect-item"></div>
