--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="main-container">
 
     <div class="game">
-        <h1 id="game-main-title">Keep Spinning</h1>
+        <h1 id="game-main-title">KEEP SPINNING!</h1>
 
         <div class="meters-wrapper">
             <div class="power-meter-container">
@@ -141,6 +141,13 @@
         <button id="phone-modal-close-btn" class="modal-close-btn">&times;</button>
         <h3 class="modal-title">📱 Phone</h3>
         <div id="phone-modal-content" class="modal-content"></div>
+    </div>
+</div>
+
+<div id="black-hole-modal" class="modal-overlay hidden">
+    <div class="modal-window">
+        <button id="black-hole-close-btn" class="modal-close-btn">&times;</button>
+        <div id="black-hole-content" class="modal-content" style="text-align: center;"></div>
     </div>
 </div>
 
