--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             overflow-x: hidden; /* Keep horizontal overflow locked */
             overflow-y: auto;   /* Allow vertical scroll if content is too tall */
             touch-action: pan-y; /* Allows vertical swipe gestures on mobile */
+            border: calc(var(--pixel-size) * 2) solid #0f0f1b; /* Game border */
+            box-sizing: border-box; /* Include border in total size */
         }
 
         /* Pixelated box shadow effect */
@@ -128,7 +130,7 @@
     <!-- Shop Modal -->
     <!-- Adjusted for better mobile view: anchors to bottom on small screens -->
     <div id="shop-modal" class="hidden absolute inset-0 bg-black bg-opacity-70 flex flex-col items-center justify-end sm:justify-center p-0">
-        <div class="w-full max-w-lg mx-auto bg-[#1a1a2e] p-4 sm:p-6 rounded-t-2xl sm:rounded-lg">
+        <div class="w-full max-w-lg mx-auto bg-[#1a1a2e] p-4 sm:p-6 rounded-t-2xl sm:rounded-lg pixel-border">
             
             <!-- Item Carousel -->
             <div id="item-carousel-container" class="mb-6 sm:mb-8">
@@ -283,8 +285,5 @@
     </script>
 </body>
 </html>
-
-
-
 
 
