--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             line-height: 80px;
             cursor: pointer;
             user-select: none;
-            transition: transform 0.2s ease, opacity 0.2s ease; /* Faster transition */
+            transition: transform 0.1s ease, opacity 0.1s ease; /* Even faster transition */
             scroll-snap-align: center; /* Each item is a snap target */
             opacity: 0.5;
         }
@@ -364,5 +364,6 @@
     </script>
 </body>
 </html>
+
 
 
