--- a/index.html
+++ b/index.html
@@ -2,119 +2,99 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Game UI</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        :root {
-            --button-height: 10vh;
-            --depth: 0.8vh; /* Adjusted depth for a better 3D block effect */
-            --font-size: clamp(12px, 3vw, 18px); /* Responsive font size */
+        /* Using a more game-like font */
+        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-            /* Button Colors */
-            --color-shop: #4ade80; /* Green */
-            --color-equipment: #38bdf8; /* Blue */
-            --color-fortunes: #facc15; /* Yellow */
-            --color-moons: #c084fc; /* Purple */
-            --color-stats: #fb923c; /* Orange */
-            --color-save: #f87171; /* Red */
-        }
-
-        html, body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
+        body {
             font-family: 'Press Start 2P', cursive;
-            background: #1f2937; /* Dark gray background */
+            touch-action: manipulation; /* Prevents double-tap to zoom on mobile */
         }
 
-        /* Main container for the game screen */
-        .game-screen {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end; /* Aligns UI to the bottom */
-            height: 100%;
-            width: 100%;
-            background: linear-gradient(180deg, #374151 0%, #111827 100%);
+        /* Custom styles for the phone's pseudo-elements like notch and speaker */
+        .phone-notch:before {
+            content: '';
+            position: absolute;
+            top: 1rem; /* Adjust based on padding */
+            left: 50%;
+            transform: translateX(-50%);
+            width: 30%;
+            height: 1.25rem; /* 20px */
+            background-color: #1f2937; /* Corresponds to dark gray bg */
+            border-radius: 0 0 0.75rem 0.75rem; /* Rounded bottom corners */
+            z-index: 20;
         }
-
-        /* Grid container for the buttons */
-        .button-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            grid-template-rows: repeat(2, 1fr);
-            gap: 15px;
-            padding: 20px;
-            width: 100%;
-            box-sizing: border-box;
-            height: 33.33vh; /* Occupies bottom third */
+        
+        /* Add a subtle home bar indicator */
+        .home-indicator:after {
+            content: '';
+            position: absolute;
+            bottom: 0.75rem;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 35%;
+            height: 0.375rem; /* 6px */
+            background-color: rgba(255, 255, 255, 0.3);
+            border-radius: 9999px;
         }
-
-        /* Base button styling */
-        .btn-3d {
-            position: relative;
-            border: none;
-            color: white;
-            padding: 10px;
-            font-family: inherit;
-            font-size: var(--font-size);
-            text-transform: uppercase;
-            cursor: pointer;
-            border-radius: 8px; /* Sharper corners for a block feel */
-            height: var(--button-height);
-            transition: transform 0.1s ease-out, box-shadow 0.1s ease-out;
-            will-change: transform;
-            -webkit-tap-highlight-color: transparent; /* Removes blue tap highlight on mobile */
-            /* This shadow creates the 3D "side" of the button */
-            box-shadow: 0 var(--depth) 0 #080808; 
-        }
-
-        /* Pushdown effect on tap/click */
-        .btn-3d:active {
-            transform: translateY(var(--depth));
-            box-shadow: none;
-        }
-
-        /* Individual button colors */
-        .btn-3d.shop { background-color: var(--color-shop); }
-        .btn-3d.equipment { background-color: var(--color-equipment); }
-        .btn-3d.fortunes { background-color: var(--color-fortunes); }
-        .btn-3d.moons { background-color: var(--color-moons); }
-        .btn-3d.stats { background-color: var(--color-stats); }
-        .btn-3d.save { background-color: var(--color-save); }
     </style>
 </head>
-<body>
+<body class="bg-gray-800 text-white flex items-center justify-center min-h-screen p-4 overflow-hidden">
 
-    <div class="game-screen">
-        <!-- The main game content would go here, above the UI -->
+    <!-- 
+      Phone Outline Container
+      - On mobile (sm), it will take up the full width and height.
+      - On larger screens (md and up), it will be constrained to a max-height to simulate a phone.
+      - `aspect-[9/19.5]` gives it a modern smartphone screen ratio.
+    -->
+    <div id="phone-outline" class="bg-gray-900 border-4 border-gray-700 rounded-[2.5rem] shadow-2xl overflow-hidden
+        w-full h-full 
+        md:w-auto md:h-full md:max-h-[95vh] md:aspect-[9/19.5]
+        transition-all duration-300 ease-in-out relative">
 
-        <div class="button-grid" id="buttonGrid">
-            <button class="btn-3d shop">Shop</button>
-            <button class="btn-3d equipment">Equip</button>
-            <button class="btn-3d fortunes">Fortune</button>
-            <button class="btn-3d moons">Moons</button>
-            <button class="btn-3d stats">Stats</button>
-            <button class="btn-3d save">Save</button>
+        <!-- Phone Screen: All game content goes inside this div -->
+        <div id="phone-screen" class="bg-gray-800 w-full h-full rounded-[2rem] p-4 pt-10 flex flex-col relative home-indicator phone-notch">
+            
+            <!-- Game Header -->
+            <header class="text-center pb-4 border-b border-gray-600">
+                <h1 class="text-2xl sm:text-3xl text-yellow-400 tracking-wider">PIXEL QUEST</h1>
+                <div class="flex justify-between items-center mt-4 text-sm">
+                    <div class="bg-gray-700 px-3 py-1 rounded-lg">
+                        <span>SCORE: </span><span id="score" class="text-green-400">1250</span>
+                    </div>
+                    <div class="bg-gray-700 px-3 py-1 rounded-lg">
+                        <span>LVL: </span><span id="level" class="text-red-400">07</span>
+                    </div>
+                </div>
+            </header>
+
+            <!-- Game Canvas / Main Area -->
+            <main class="flex-grow flex items-center justify-center my-4">
+                <div class="w-full h-full bg-gray-900/50 border-2 border-dashed border-gray-600 rounded-lg flex items-center justify-center">
+                    <p class="text-gray-400 text-center text-lg">Game Area</p>
+                </div>
+            </main>
+
+            <!-- Game Controls -->
+            <footer class="mt-auto">
+                <div class="grid grid-cols-2 gap-4">
+                    <button class="bg-blue-500 hover:bg-blue-600 text-white py-4 rounded-lg text-lg shadow-lg transform active:scale-95 transition-transform duration-150">
+                        ACTION A
+                    </button>
+                    <button class="bg-purple-500 hover:bg-purple-600 text-white py-4 rounded-lg text-lg shadow-lg transform active:scale-95 transition-transform duration-150">
+                        ACTION B
+                    </button>
+                </div>
+                <button class="w-full bg-gray-600 hover:bg-gray-700 text-gray-200 py-3 mt-4 rounded-lg text-sm shadow-md transform active:scale-95 transition-transform duration-150">
+                    PAUSE
+                </button>
+            </footer>
+
         </div>
     </div>
 
-    <script>
-        // Simple script to log which button is pressed
-        const grid = document.getElementById('buttonGrid');
-        grid.addEventListener('click', function(event) {
-            if (event.target.matches('.btn-3d')) {
-                const buttonType = event.target.textContent;
-                console.log(`${buttonType} button was tapped!`);
-                // You can add your game logic here, e.g., openShop(), openStats(), etc.
-            }
-        });
-    </script>
-
 </body>
 </html>
-
