--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         }
     </style>
 </head>
-<body class="bg-gray-800 text-white flex items-center justify-center min-h-screen p-4 overflow-hidden">
+<body class="bg-gray-800 text-white flex items-center justify-center h-screen md:p-4 overflow-hidden">
 
     <!-- 
       Phone Outline Container
@@ -50,13 +50,13 @@
       - On larger screens (md and up), it will be constrained to a max-height to simulate a phone.
       - `aspect-[9/19.5]` gives it a modern smartphone screen ratio.
     -->
-    <div id="phone-outline" class="bg-gray-900 border-4 border-gray-700 rounded-[2.5rem] shadow-2xl overflow-hidden
+    <div id="phone-outline" class="bg-gray-900 border-4 border-gray-700 shadow-2xl overflow-hidden
         w-full h-full 
-        md:w-auto md:h-full md:max-h-[95vh] md:aspect-[9/19.5]
+        md:w-auto md:max-h-[95vh] md:aspect-[9/19.5] md:rounded-[2.5rem]
         transition-all duration-300 ease-in-out relative">
 
         <!-- Phone Screen: All game content goes inside this div -->
-        <div id="phone-screen" class="bg-gray-800 w-full h-full rounded-[2rem] p-4 pt-10 flex flex-col relative home-indicator phone-notch">
+        <div id="phone-screen" class="bg-gray-800 w-full h-full md:rounded-[2rem] p-4 pt-10 flex flex-col relative home-indicator phone-notch">
             
             <!-- Game Header -->
             <header class="text-center pb-4 border-b border-gray-600">
@@ -98,3 +98,4 @@
 
 </body>
 </html>
+
