--- a/index.html
+++ b/index.html
@@ -3,98 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Game UI</title>
+    <title>Mobile Game Frame</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        /* Using a more game-like font */
-        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-
+        /* Base styles for the entire page */
         body {
-            font-family: 'Press Start 2P', cursive;
-            touch-action: manipulation; /* Prevents double-tap to zoom on mobile */
+            font-family: 'Inter', sans-serif;
+            transition: padding 0.3s ease;
         }
 
-        /* Custom styles for the phone's pseudo-elements like notch and speaker */
-        .phone-notch:before {
-            content: '';
-            position: absolute;
-            top: 1rem; /* Adjust based on padding */
-            left: 50%;
-            transform: translateX(-50%);
-            width: 30%;
-            height: 1.25rem; /* 20px */
-            background-color: #1f2937; /* Corresponds to dark gray bg */
-            border-radius: 0 0 0.75rem 0.75rem; /* Rounded bottom corners */
-            z-index: 20;
+        /* The phone silhouette container - styled for desktop first */
+        #phone-outline {
+            /* Phone shape and appearance */
+            width: 100%;
+            height: 100%;
+            background: #18181b; /* A dark, modern charcoal color */
+            border: 8px solid #0a0a0a;
+            border-radius: 56px; /* Generous rounding for the corners */
+            box-shadow: 0 20px 50px rgba(0,0,0,0.5), inset 0 4px 12px rgba(255,255,255,0.05);
+            padding: 14px; /* This creates the bezel */
+            box-sizing: border-box;
+
+            /* Responsive constraints and aspect ratio */
+            max-width: 420px; /* Max width on large screens */
+            max-height: 95vh; /* Max height to prevent overflow */
+            aspect-ratio: 390 / 844; /* A common iPhone resolution ratio */
+
+            /* Flex container for the inner screen */
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            transition: all 0.3s ease;
         }
-        
-        /* Add a subtle home bar indicator */
-        .home-indicator:after {
-            content: '';
-            position: absolute;
-            bottom: 0.75rem;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 35%;
-            height: 0.375rem; /* 6px */
-            background-color: rgba(255, 255, 255, 0.3);
-            border-radius: 9999px;
+
+        /* The inner screen where the game will live */
+        #screen {
+            /* Fills the padded area of the phone outline */
+            width: 100%;
+            flex-grow: 1; /* Takes up all available space inside the outline */
+            background: #000; /* A simple black background for the game area */
+            border-radius: 42px; /* Must be less than the parent's radius */
+            transition: border-radius 0.3s ease;
+            overflow: hidden; /* Ensures game content doesn't spill out */
+        }
+
+        /* Media query for mobile devices */
+        /* When the screen width is 640px or less, these styles apply */
+        @media (max-width: 640px) {
+            /* Remove padding from the body for a fullscreen experience */
+            body {
+                padding: 0;
+            }
+
+            /* The phone outline transforms to fill the screen */
+            #phone-outline {
+                width: 100vw;
+                height: 100vh;
+                max-width: 100%;
+                max-height: 100%;
+                border-radius: 0;
+                border: none;
+                box-shadow: none;
+                padding: 0;
+            }
+
+            /* The screen also removes its rounding to be perfectly square */
+            #screen {
+                border-radius: 0;
+            }
         }
     </style>
 </head>
-<body class="bg-gray-800 text-white flex items-center justify-center h-screen md:p-4 overflow-hidden">
+<!-- 
+  The body is set up to center the phone outline.
+  On desktop, 'p-4' (padding) gives it some space from the edges.
+  This padding is removed by the media query on mobile.
+-->
+<body class="bg-zinc-200 dark:bg-zinc-800 flex items-center justify-center min-h-screen p-4">
 
-    <!-- 
-      Phone Outline Container
-      - On mobile (sm), it will take up the full width and height.
-      - On larger screens (md and up), it will be constrained to a max-height to simulate a phone.
-      - `aspect-[9/19.5]` gives it a modern smartphone screen ratio.
-    -->
-    <div id="phone-outline" class="bg-gray-900 border-4 border-gray-700 shadow-2xl overflow-hidden
-        w-full h-full 
-        md:w-auto md:max-h-[95vh] md:aspect-[9/19.5] md:rounded-[2.5rem]
-        transition-all duration-300 ease-in-out relative">
-
-        <!-- Phone Screen: All game content goes inside this div -->
-        <div id="phone-screen" class="bg-gray-800 w-full h-full md:rounded-[2rem] p-4 pt-10 flex flex-col relative home-indicator phone-notch">
-            
-            <!-- Game Header -->
-            <header class="text-center pb-4 border-b border-gray-600">
-                <h1 class="text-2xl sm:text-3xl text-yellow-400 tracking-wider">PIXEL QUEST</h1>
-                <div class="flex justify-between items-center mt-4 text-sm">
-                    <div class="bg-gray-700 px-3 py-1 rounded-lg">
-                        <span>SCORE: </span><span id="score" class="text-green-400">1250</span>
-                    </div>
-                    <div class="bg-gray-700 px-3 py-1 rounded-lg">
-                        <span>LVL: </span><span id="level" class="text-red-400">07</span>
-                    </div>
-                </div>
-            </header>
-
-            <!-- Game Canvas / Main Area -->
-            <main class="flex-grow flex items-center justify-center my-4">
-                <div class="w-full h-full bg-gray-900/50 border-2 border-dashed border-gray-600 rounded-lg flex items-center justify-center">
-                    <p class="text-gray-400 text-center text-lg">Game Area</p>
-                </div>
-            </main>
-
-            <!-- Game Controls -->
-            <footer class="mt-auto">
-                <div class="grid grid-cols-2 gap-4">
-                    <button class="bg-blue-500 hover:bg-blue-600 text-white py-4 rounded-lg text-lg shadow-lg transform active:scale-95 transition-transform duration-150">
-                        ACTION A
-                    </button>
-                    <button class="bg-purple-500 hover:bg-purple-600 text-white py-4 rounded-lg text-lg shadow-lg transform active:scale-95 transition-transform duration-150">
-                        ACTION B
-                    </button>
-                </div>
-                <button class="w-full bg-gray-600 hover:bg-gray-700 text-gray-200 py-3 mt-4 rounded-lg text-sm shadow-md transform active:scale-95 transition-transform duration-150">
-                    PAUSE
-                </button>
-            </footer>
-
-        </div>
+  <!-- The main container for the phone silhouette -->
+  <div id="phone-outline">
+    <!-- The screen area where your game content will go -->
+    <div id="screen">
+      <!-- Your game canvas or other elements will be placed here -->
     </div>
+  </div>
 
 </body>
 </html>
