--- a/index.html
+++ b/index.html
@@ -3,95 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Game Frame</title>
+    <title>Mobile Game UI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        /* Base styles for the entire page */
         body {
             font-family: 'Inter', sans-serif;
-            transition: padding 0.3s ease;
-        }
-
-        /* The phone silhouette container - styled for desktop first */
-        #phone-outline {
-            /* Phone shape and appearance */
-            width: 100%;
-            height: 100%;
-            background: #18181b; /* A dark, modern charcoal color */
-            border: 8px solid #0a0a0a;
-            border-radius: 56px; /* Generous rounding for the corners */
-            box-shadow: 0 20px 50px rgba(0,0,0,0.5), inset 0 4px 12px rgba(255,255,255,0.05);
-            padding: 14px; /* This creates the bezel */
-            box-sizing: border-box;
-
-            /* Responsive constraints and aspect ratio */
-            max-width: 420px; /* Max width on large screens */
-            max-height: 95vh; /* Max height to prevent overflow */
-            aspect-ratio: 390 / 844; /* A common iPhone resolution ratio */
-
-            /* Flex container for the inner screen */
-            display: flex;
-            flex-direction: column;
-            position: relative;
-            transition: all 0.3s ease;
-        }
-
-        /* The inner screen where the game will live */
-        #screen {
-            /* Fills the padded area of the phone outline */
-            width: 100%;
-            flex-grow: 1; /* Takes up all available space inside the outline */
-            background: #000; /* A simple black background for the game area */
-            border-radius: 42px; /* Must be less than the parent's radius */
-            transition: border-radius 0.3s ease;
-            overflow: hidden; /* Ensures game content doesn't spill out */
-        }
-
-        /* Media query for mobile devices */
-        /* When the screen width is 640px or less, these styles apply */
-        @media (max-width: 640px) {
-            /* Remove padding from the body for a fullscreen experience */
-            body {
-                padding: 0;
-            }
-
-            /* The phone outline transforms to fill the screen */
-            #phone-outline {
-                width: 100vw;
-                height: 100vh;
-                max-width: 100%;
-                max-height: 100%;
-                border-radius: 0;
-                border: none;
-                box-shadow: none;
-                padding: 0;
-            }
-
-            /* The screen also removes its rounding to be perfectly square */
-            #screen {
-                border-radius: 0;
-            }
         }
     </style>
 </head>
-<!-- 
-  The body is set up to center the phone outline.
-  On desktop, 'p-4' (padding) gives it some space from the edges.
-  This padding is removed by the media query on mobile.
--->
-<body class="bg-zinc-200 dark:bg-zinc-800 flex items-center justify-center min-h-screen p-4">
+<body class="bg-gray-900 flex items-center justify-center min-h-screen">
 
-  <!-- The main container for the phone silhouette -->
-  <div id="phone-outline">
-    <!-- The screen area where your game content will go -->
-    <div id="screen">
-      <!-- Your game canvas or other elements will be placed here -->
+    <!-- Mobile Phone Silhouette -->
+    <div class="w-full max-w-sm h-[90vh] max-h-[800px] bg-black border-4 border-gray-700 rounded-3xl shadow-2xl flex flex-col overflow-hidden">
+        
+        <!-- Game Screen Area (Top 2/3) -->
+        <div class="h-2/3 bg-gray-800">
+            <!-- Game content would go here -->
+        </div>
+
+        <!-- Controls Area (Bottom 1/3) -->
+        <div class="h-1/3 bg-gray-900 p-4 border-t-4 border-gray-700">
+            <div class="grid grid-cols-3 grid-rows-2 gap-3 h-full">
+                <!-- Row 1 -->
+                <button class="bg-blue-500 text-white font-bold rounded-lg shadow-md hover:bg-blue-600 active:scale-95 transition-transform">Items</button>
+                <button class="bg-green-500 text-white font-bold rounded-lg shadow-md hover:bg-green-600 active:scale-95 transition-transform">Skills</button>
+                <button class="bg-yellow-500 text-white font-bold rounded-lg shadow-md hover:bg-yellow-600 active:scale-95 transition-transform">Map</button>
+                
+                <!-- Row 2 -->
+                <button class="bg-purple-500 text-white font-bold rounded-lg shadow-md hover:bg-purple-600 active:scale-95 transition-transform">Equip</button>
+                <button class="bg-red-500 text-white font-bold rounded-lg shadow-md hover:bg-red-600 active:scale-95 transition-transform">Quests</button>
+                <button class="bg-indigo-500 text-white font-bold rounded-lg shadow-md hover:bg-indigo-600 active:scale-95 transition-transform">System</button>
+            </div>
+        </div>
     </div>
-  </div>
 
 </body>
 </html>
-
