--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
     <div class="w-full max-w-sm h-[90vh] max-h-[800px] bg-black border-4 border-gray-700 rounded-3xl shadow-2xl flex flex-col overflow-hidden">
         
         <!-- Game Screen Area (Top 3/5) -->
-        <div class="h-3/5 bg-gray-800">
+        <div class="h-3/5 bg-gray-900">
             <!-- Game content would go here -->
         </div>
 
         <!-- Controls Area (Bottom 2/5) -->
-        <div class="h-2/5 bg-gray-900 p-8 border-t-4 border-gray-700">
+        <div class="h-2/5 bg-gray-800 p-8 border-t-4 border-gray-700">
             <div class="grid grid-cols-3 grid-rows-2 gap-6 h-full">
                 <!-- Row 1 -->
-                <button class="bg-blue-500 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:bg-blue-600 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all">Items</button>
-                <button class="bg-green-500 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:bg-green-600 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all">Skills</button>
-                <button class="bg-yellow-500 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:bg-yellow-600 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all">Map</button>
+                <button class="bg-blue-500 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:bg-blue-600 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Items</button>
+                <button class="bg-green-500 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:bg-green-600 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Skills</button>
+                <button class="bg-yellow-500 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:bg-yellow-600 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Map</button>
                 
                 <!-- Row 2 -->
-                <button class="bg-purple-500 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:bg-purple-600 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all">Equip</button>
-                <button class="bg-red-500 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:bg-red-600 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all">Quests</button>
-                <button class="bg-indigo-500 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:bg-indigo-600 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all">System</button>
+                <button class="bg-purple-500 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:bg-purple-600 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Equip</button>
+                <button class="bg-red-500 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:bg-red-600 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Quests</button>
+                <button class="bg-indigo-500 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:bg-indigo-600 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">System</button>
             </div>
         </div>
     </div>
