--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Changed font to Exo 2 for a modern, strong look -->
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Exo 2', sans-serif;
         }
     </style>
 </head>
@@ -19,13 +20,53 @@
     <!-- Mobile Phone Silhouette -->
     <div class="w-full max-w-sm h-[90vh] max-h-[800px] bg-black border-4 border-gray-700 rounded-3xl shadow-2xl flex flex-col overflow-hidden">
         
-        <!-- Game Screen Area (Top 3/5) -->
-        <div class="h-3/5 bg-gray-900">
+        <!-- Top Status Bar (approx 1/5) -->
+        <div class="h-[20%] bg-gray-800 p-4 border-b-4 border-gray-700 flex flex-col justify-around text-white">
+            <!-- Counters moved above the meters -->
+            <div class="grid grid-cols-4 gap-x-2 text-center mb-3">
+                <div class="text-sm">
+                    <span class="font-bold text-gray-400 block">LEVEL</span>
+                    <span class="font-bold text-lg">99</span>
+                </div>
+                <div class="text-sm">
+                    <span class="font-bold text-gray-400 block">EXP</span>
+                    <span class="font-bold text-lg">12345</span>
+                </div>
+                <div class="text-sm">
+                    <span class="font-bold text-gray-400 block">GOLD</span>
+                    <span class="font-bold text-lg">9999</span>
+                </div>
+                <div class="text-sm">
+                    <span class="font-bold text-gray-400 block">GEMS</span>
+                    <span class="font-bold text-lg">500</span>
+                </div>
+            </div>
+            <!-- HP and MP Meters -->
+            <div class="space-y-2">
+                <!-- HP Bar -->
+                <div class="flex items-center">
+                    <span class="font-bold text-sm text-yellow-300 w-10">HP</span>
+                    <div class="w-full bg-black rounded-full h-5 border-2 border-gray-900">
+                        <div class="bg-red-500 h-full rounded-full" style="width: 85%"></div>
+                    </div>
+                </div>
+                <!-- MP Bar -->
+                <div class="flex items-center">
+                    <span class="font-bold text-sm text-yellow-300 w-10">MP</span>
+                    <div class="w-full bg-black rounded-full h-5 border-2 border-gray-900">
+                        <div class="bg-blue-500 h-full rounded-full" style="width: 60%"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Game Screen Area (Central Area) -->
+        <div class="h-[40%] bg-gray-900">
             <!-- Game content would go here -->
         </div>
 
         <!-- Controls Area (Bottom 2/5) -->
-        <div class="h-2/5 bg-gray-800 p-8 border-t-4 border-gray-700">
+        <div class="h-[40%] bg-gray-800 p-8 border-t-4 border-gray-700">
             <div class="grid grid-cols-3 grid-rows-2 gap-6 h-full">
                 <!-- Row 1 -->
                 <button class="bg-blue-500 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:bg-blue-600 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Items</button>
@@ -42,4 +83,3 @@
 
 </body>
 </html>
-
