--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Changed font to Exo 2 for a modern, strong look -->
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Changed font to Poppins for a clean, modern look -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Exo 2', sans-serif;
+            font-family: 'Poppins', sans-serif;
         }
     </style>
 </head>
@@ -21,9 +21,11 @@
     <div class="w-full max-w-sm h-[90vh] max-h-[800px] bg-black border-4 border-gray-700 rounded-3xl shadow-2xl flex flex-col overflow-hidden">
         
         <!-- Top Status Bar (approx 1/5) -->
-        <div class="h-[20%] bg-gray-800 p-4 border-b-4 border-gray-700 flex flex-col justify-around text-white">
+        <!-- Changed justify-around to justify-center for better vertical alignment -->
+        <div class="h-[20%] bg-gray-800 p-4 border-b-4 border-gray-700 flex flex-col justify-center text-white">
             <!-- Counters moved above the meters -->
-            <div class="grid grid-cols-4 gap-x-2 text-center mb-3">
+            <!-- Removed mb-3 for more controlled spacing -->
+            <div class="grid grid-cols-4 gap-x-2 text-center">
                 <div class="text-sm">
                     <span class="font-bold text-gray-400 block">LEVEL</span>
                     <span class="font-bold text-lg">99</span>
@@ -42,7 +44,8 @@
                 </div>
             </div>
             <!-- HP and MP Meters -->
-            <div class="space-y-2">
+            <!-- Added margin-top to create space between counters and meters -->
+            <div class="space-y-2 mt-4">
                 <!-- HP Bar -->
                 <div class="flex items-center">
                     <span class="font-bold text-sm text-yellow-300 w-10">HP</span>
@@ -83,3 +86,4 @@
 
 </body>
 </html>
+
