--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     <div class="w-full max-w-sm h-[90vh] max-h-[800px] bg-black border-4 border-gray-700 rounded-3xl shadow-2xl flex flex-col overflow-hidden">
         
         <!-- Top Status Bar (approx 1/5) -->
-        <!-- Changed justify-around to justify-center for better vertical alignment -->
-        <div class="h-[20%] bg-gray-800 p-4 border-b-4 border-gray-700 flex flex-col justify-center text-white">
+        <!-- Replaced margin with flexbox gap for better alignment -->
+        <div class="h-[20%] bg-gray-800 p-4 border-b-4 border-gray-700 flex flex-col justify-center gap-3 text-white">
             <!-- Counters moved above the meters -->
-            <!-- Removed mb-3 for more controlled spacing -->
             <div class="grid grid-cols-4 gap-x-2 text-center">
                 <div class="text-sm">
                     <span class="font-bold text-gray-400 block">LEVEL</span>
@@ -44,20 +43,20 @@
                 </div>
             </div>
             <!-- HP and MP Meters -->
-            <!-- Added margin-top to create space between counters and meters -->
-            <div class="space-y-2 mt-4">
+            <!-- Removed mt-4, parent gap now handles spacing -->
+            <div class="space-y-2">
                 <!-- HP Bar -->
                 <div class="flex items-center">
-                    <span class="font-bold text-sm text-yellow-300 w-10">HP</span>
+                    <span class="text-2xl w-10 text-center">❤️</span>
                     <div class="w-full bg-black rounded-full h-5 border-2 border-gray-900">
                         <div class="bg-red-500 h-full rounded-full" style="width: 85%"></div>
                     </div>
                 </div>
-                <!-- MP Bar -->
+                <!-- Skull Bar -->
                 <div class="flex items-center">
-                    <span class="font-bold text-sm text-yellow-300 w-10">MP</span>
+                    <span class="text-2xl w-10 text-center">💀</span>
                     <div class="w-full bg-black rounded-full h-5 border-2 border-gray-900">
-                        <div class="bg-blue-500 h-full rounded-full" style="width: 60%"></div>
+                        <div class="bg-gray-500 h-full rounded-full" style="width: 60%"></div>
                     </div>
                 </div>
             </div>
