--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
         </div>
 
         <!-- Game Screen Area (Central Area) -->
-        <div class="flex-grow bg-gray-900">
-            <!-- Game content would go here -->
+        <div class="flex-grow bg-gray-900 flex items-center justify-center">
+            <!-- Thin light gray horizontal line -->
+            <div class="w-full h-px bg-gray-700"></div>
         </div>
 
         <!-- Controls Area (Bottom 2/5) -->
@@ -73,14 +74,14 @@
             <!-- Button Grid Container -->
             <div id="button-grid" class="p-8 h-full">
                 <div class="grid grid-cols-3 grid-rows-2 gap-6 h-full items-center">
-                    <!-- Buttons updated with gradients and data attributes -->
-                    <button data-modal-target="items-modal" class="bg-gradient-to-b from-blue-400 to-blue-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-blue-500 hover:to-blue-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Items</button>
+                    <!-- Rectangular buttons enlarged -->
+                    <button data-modal-target="items-modal" class="h-16 bg-gradient-to-b from-blue-400 to-blue-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-blue-500 hover:to-blue-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Items</button>
                     <!-- Made skills button round and removed modal functionality -->
                     <button class="bg-gradient-to-b from-green-400 to-green-600 text-white font-bold rounded-full aspect-square border-2 border-black shadow-[10px_10px_0px_#000] hover:from-green-500 hover:to-green-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75 flex items-center justify-center">Skills</button>
-                    <button data-modal-target="map-modal" class="bg-gradient-to-b from-yellow-400 to-yellow-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-yellow-500 hover:to-yellow-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Map</button>
-                    <button data-modal-target="equip-modal" class="bg-gradient-to-b from-purple-400 to-purple-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-purple-500 hover:to-purple-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Equip</button>
-                    <button data-modal-target="quests-modal" class="bg-gradient-to-b from-red-400 to-red-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-red-500 hover:to-red-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Quests</button>
-                    <button data-modal-target="system-modal" class="bg-gradient-to-b from-indigo-400 to-indigo-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-indigo-500 hover:to-indigo-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">System</button>
+                    <button data-modal-target="map-modal" class="h-16 bg-gradient-to-b from-yellow-400 to-yellow-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-yellow-500 hover:to-yellow-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Map</button>
+                    <button data-modal-target="equip-modal" class="h-16 bg-gradient-to-b from-purple-400 to-purple-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-purple-500 hover:to-purple-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Equip</button>
+                    <button data-modal-target="quests-modal" class="h-16 bg-gradient-to-b from-red-400 to-red-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-red-500 hover:to-red-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Quests</button>
+                    <button data-modal-target="system-modal" class="h-16 bg-gradient-to-b from-indigo-400 to-indigo-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-indigo-500 hover:to-indigo-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">System</button>
                 </div>
             </div>
             
