--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
                 <div class="flex items-center">
                     <span class="text-2xl w-10 text-center">❤️</span>
                     <div class="w-full bg-black rounded-full h-5 border-2 border-gray-900">
-                        <!-- Changed to pink-to-red gradient -->
                         <div class="bg-gradient-to-r from-pink-500 to-red-500 h-full rounded-full" style="width: 85%"></div>
                     </div>
                 </div>
@@ -55,7 +54,6 @@
                 <div class="flex items-center">
                     <span class="text-2xl w-10 text-center">💀</span>
                     <div class="w-full bg-black rounded-full h-5 border-2 border-gray-900">
-                        <!-- Changed to dark-gray-to-light-gray gradient -->
                         <div class="bg-gradient-to-r from-gray-700 to-gray-400 h-full rounded-full" style="width: 60%"></div>
                     </div>
                 </div>
@@ -63,21 +61,30 @@
         </div>
 
         <!-- Game Screen Area (Central Area) -->
-        <div class="flex-grow bg-gray-900 flex items-center justify-center">
+        <div class="flex-grow bg-gray-900 flex flex-col p-4">
+            <!-- Top half for slot machine -->
+            <div class="flex-1 flex items-center justify-center">
+                <!-- Slot Machine -->
+                <div id="slot-machine" class="flex space-x-4">
+                    <div id="reel1" class="reel text-6xl p-4 bg-gray-800 border-2 border-gray-600 rounded-lg w-24 h-24 flex items-center justify-center">?</div>
+                    <div id="reel2" class="reel text-6xl p-4 bg-gray-800 border-2 border-gray-600 rounded-lg w-24 h-24 flex items-center justify-center">?</div>
+                    <div id="reel3" class="reel text-6xl p-4 bg-gray-800 border-2 border-gray-600 rounded-lg w-24 h-24 flex items-center justify-center">?</div>
+                </div>
+            </div>
             <!-- Thin light gray horizontal line -->
             <div class="w-full h-px bg-gray-700"></div>
+            <!-- Bottom half (empty) -->
+            <div class="flex-1"></div>
         </div>
 
-        <!-- Controls Area (Bottom 2/5) -->
-        <!-- Added relative and overflow-hidden for modal positioning -->
+        <!-- Controls Area -->
         <div id="controls-area" class="h-[35%] bg-gray-800 border-t-4 border-gray-700 relative overflow-hidden">
             <!-- Button Grid Container -->
             <div id="button-grid" class="p-8 h-full">
                 <div class="grid grid-cols-3 grid-rows-2 gap-6 h-full items-center">
-                    <!-- Rectangular buttons enlarged -->
                     <button data-modal-target="items-modal" class="h-16 bg-gradient-to-b from-blue-400 to-blue-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-blue-500 hover:to-blue-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Items</button>
-                    <!-- Made skills button round and removed modal functionality -->
-                    <button class="bg-gradient-to-b from-green-400 to-green-600 text-white font-bold rounded-full aspect-square border-2 border-black shadow-[10px_10px_0px_#000] hover:from-green-500 hover:to-green-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75 flex items-center justify-center">Skills</button>
+                    <!-- Changed button text to Spin -->
+                    <button id="spin-button" class="bg-gradient-to-b from-green-400 to-green-600 text-white font-bold rounded-full aspect-square border-2 border-black shadow-[10px_10px_0px_#000] hover:from-green-500 hover:to-green-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75 flex items-center justify-center">Spin</button>
                     <button data-modal-target="map-modal" class="h-16 bg-gradient-to-b from-yellow-400 to-yellow-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-yellow-500 hover:to-yellow-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Map</button>
                     <button data-modal-target="equip-modal" class="h-16 bg-gradient-to-b from-purple-400 to-purple-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-purple-500 hover:to-purple-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Equip</button>
                     <button data-modal-target="quests-modal" class="h-16 bg-gradient-to-b from-red-400 to-red-600 text-white font-bold rounded-lg border-2 border-black shadow-[10px_10px_0px_#000] hover:from-red-500 hover:to-red-700 active:shadow-none active:translate-x-2.5 active:translate-y-2.5 transition-all duration-75">Quests</button>
@@ -86,31 +93,26 @@
             </div>
             
             <!-- Modals -->
-            <!-- Items Modal -->
             <div id="items-modal" class="modal-content hidden absolute inset-0 h-full w-full p-8 bg-gradient-to-b from-blue-400 to-blue-600 text-white flex flex-col items-center justify-center text-center">
                 <button class="close-modal absolute top-4 right-4 text-white font-bold text-3xl leading-none hover:text-gray-300">&times;</button>
                 <h2 class="text-3xl font-bold mb-4">Items</h2>
                 <p>Your inventory will be displayed here.</p>
             </div>
-            <!-- Map Modal -->
             <div id="map-modal" class="modal-content hidden absolute inset-0 h-full w-full p-8 bg-gradient-to-b from-yellow-400 to-yellow-600 text-white flex flex-col items-center justify-center text-center">
                 <button class="close-modal absolute top-4 right-4 text-white font-bold text-3xl leading-none hover:text-gray-300">&times;</button>
                 <h2 class="text-3xl font-bold mb-4">Map</h2>
                 <p>The world map will be displayed here.</p>
             </div>
-            <!-- Equip Modal -->
             <div id="equip-modal" class="modal-content hidden absolute inset-0 h-full w-full p-8 bg-gradient-to-b from-purple-400 to-purple-600 text-white flex flex-col items-center justify-center text-center">
                 <button class="close-modal absolute top-4 right-4 text-white font-bold text-3xl leading-none hover:text-gray-300">&times;</button>
                 <h2 class="text-3xl font-bold mb-4">Equipment</h2>
                 <p>Your character's equipment will be displayed here.</p>
             </div>
-            <!-- Quests Modal -->
             <div id="quests-modal" class="modal-content hidden absolute inset-0 h-full w-full p-8 bg-gradient-to-b from-red-400 to-red-600 text-white flex flex-col items-center justify-center text-center">
                 <button class="close-modal absolute top-4 right-4 text-white font-bold text-3xl leading-none hover:text-gray-300">&times;</button>
                 <h2 class="text-3xl font-bold mb-4">Quests</h2>
                 <p>Your active quests will be displayed here.</p>
             </div>
-            <!-- System Modal -->
             <div id="system-modal" class="modal-content hidden absolute inset-0 h-full w-full p-8 bg-gradient-to-b from-indigo-400 to-indigo-600 text-white flex flex-col items-center justify-center text-center">
                 <button class="close-modal absolute top-4 right-4 text-white font-bold text-3xl leading-none hover:text-gray-300">&times;</button>
                 <h2 class="text-3xl font-bold mb-4">System</h2>
@@ -121,19 +123,18 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
+            // Modal Logic
             const modalButtons = document.querySelectorAll('[data-modal-target]');
             const closeButtons = document.querySelectorAll('.close-modal');
             const buttonGrid = document.getElementById('button-grid');
             const allModals = document.querySelectorAll('.modal-content');
 
-            // Function to open a modal
             const openModal = (modal) => {
                 if (modal == null) return;
                 buttonGrid.classList.add('hidden');
                 modal.classList.remove('hidden');
             }
 
-            // Function to close all modals
             const closeModal = () => {
                 allModals.forEach(modal => {
                     if (!modal.classList.contains('hidden')) {
@@ -143,7 +144,6 @@
                 buttonGrid.classList.remove('hidden');
             }
 
-            // Add event listeners to modal trigger buttons
             modalButtons.forEach(button => {
                 button.addEventListener('click', () => {
                     const modal = document.querySelector(button.dataset.modalTarget) || document.getElementById(button.dataset.modalTarget);
@@ -151,14 +151,48 @@
                 });
             });
 
-            // Add event listeners to close buttons
             closeButtons.forEach(button => {
                 button.addEventListener('click', () => {
                     closeModal();
                 });
             });
+
+            // Slot Machine Logic
+            const spinButton = document.getElementById('spin-button');
+            const reels = [
+                document.getElementById('reel1'),
+                document.getElementById('reel2'),
+                document.getElementById('reel3')
+            ];
+            const emojis = ['🧌', '🧛', '🐸', '🦟', '🐺', '🥷'];
+            
+            const spinReels = () => {
+                spinButton.disabled = true;
+
+                let spinIntervals = [];
+
+                reels.forEach((reel, i) => {
+                    spinIntervals[i] = setInterval(() => {
+                        const randomIndex = Math.floor(Math.random() * emojis.length);
+                        reel.textContent = emojis[randomIndex];
+                    }, 100);
+
+                    setTimeout(() => {
+                        clearInterval(spinIntervals[i]);
+                        const finalIndex = Math.floor(Math.random() * emojis.length);
+                        reel.textContent = emojis[finalIndex];
+                        // Re-enable button after the last reel stops
+                        if (i === reels.length - 1) {
+                            spinButton.disabled = false;
+                        }
+                    }, 1000 + (i * 500)); // Staggered stop times
+                });
+            };
+
+            spinButton.addEventListener('click', spinReels);
         });
     </script>
 </body>
 </html>
+
 
